social media buttons bug fixed by moving them higher to ensure their visibility

--- a/src/components/header/nav/style.module.scss
+++ b/src/components/header/nav/style.module.scss
@@ -10,12 +10,12 @@
 
     .body{
         box-sizing: border-box;
-        height: 100%;
+        height: 100vh;
         margin-right: 1rem;
         margin-left: 2rem;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
 
         .nav{
             display: flex;
